<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/orange_50"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_films"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/new_films_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/watching"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginTop="32dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/watching_films_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/recommendations"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginTop="32dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommendation_films_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>

    </ScrollView>



</LinearLayout>